# TTS-platform

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  README.md  SECURITY.md  TASKS.md  TESTING.md  pyproject.toml
apps/chrome_extension/: INSTALL.md  README.md  TROUBLESHOOTING.md  manifest.json
apps/sapi_bridge/: README.md  TtsPlatformSapiBridge.vcxproj
config/: config.example.toml
design_doc/: backend_status_note.md  implementation_phase_additions.md  phase_7_plan.md  thoughts_log.md  tts_platform_design_v_2.md  v1_delivery_plan.md
docs/: backend_model_setup.md  sapi_bridge.md  v1_completion_audit.md  v1_final_security.md  v1_readiness.md
docs/codex/: Documentation.md  Implement.md  Plan.md  Prompt.md
models/: MANIFEST.json  catalog.json
scripts/: benchmark.py  check_chrome_extension_smoke.py  check_extension.py  check_extension_onboarding.py  check_extension_reader_flow.py  check_local_reader_bundle.py  check_local_service_bootstrap.py  check_model_management_flow.py  check_sapi_bridge.py  check_sapi_toolchain.py  check_security_defaults.py  check_v1_completion.py  check_v1_readiness.py  check_windows_bundle_bootstrap.py  check_windows_bundle_install.py  check_windows_launchers.py  check_windows_service_task.py  demo_real_voice.py  dev_run.py  package_extension.py  package_windows_bundle.py  release_check.py  smoke_service.py
scripts/windows/: build_sapi_bridge.ps1  check_sapi_native_voice.ps1  check_sapi_voice.ps1  install_local.cmd  install_local.ps1  install_sapi_native_voice.ps1  install_sapi_voice.ps1  remove_sapi_native_voice.ps1  (+4 more)
(+58 files in other folders)
