[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-platform"
version = "0.1.0"
description = "Offline-first local TTS platform"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "tomli>=2.0.1; python_version < '3.11'",
  "websockets>=12.0,<16.0",
]

[project.scripts]
tts = "tts_service.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0",
]
real = [
  "numpy>=1.26.0,<3.0.0",
  "sherpa-onnx>=1.13.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["packages/tts_core/src", "apps/tts_service/src"]

[tool.pytest.ini_options]
pythonpath = [
  "packages/tts_core/src",
  "apps/tts_service/src",
]
testpaths = [
  "packages/tts_core/tests",
  "apps/tts_service/tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
